--- a/DecentHolograms/lang.yml
+++ b/DecentHolograms/lang.yml
@@ -1,36 +1,36 @@
 prefix: '&8[&3DecentHolograms&8] &7'
-no_perm: '{prefix}&cYou are not allowed to use this.'
-only_player: '{prefix}&cThis action can only be executed by player.'
-reloaded: '{prefix}&aSuccessfully reloaded in %1$d ms!'
+no_perm: '{prefix}&c您没有权限使用它.'
+only_player: '{prefix}&c此操作只能由玩家执行.'
+reloaded: '{prefix}&a已成功重新加载在 %1$d ms 内!'
 command:
-  use_help: '{prefix}Use &b/holograms help&7 to view possible commands.'
-  usage: '{prefix}Usage: &b%1$s'
-  unknown_sub_command: '{prefix}Unknown sub command.'
+  use_help: '{prefix}用 &b/holograms help&7 查看可能的命令.'
+  usage: '{prefix}用法: &b%1$s'
+  unknown_sub_command: '{prefix}未知子命令.'
 hologram:
-  does_not_exist: '{prefix}&cHologram with that name doesn''t exist.'
-  already_exists: '{prefix}&cHologram with that name already exists.'
-  invalid_name: '{prefix}&cInvalid name ''%1$s'', only use alphanumerical characters,
-    underscore and dash.'
-  created: '{prefix}Hologram has been created!'
-  cloned: '{prefix}Hologram has been cloned!'
-  deleted: '{prefix}Hologram has been deleted!'
-  updated: '{prefix}Hologram has been updated!'
-  renamed: '{prefix}Hologram has been renamed! &7(&b%1$s&7 -> &b%2$s&7)'
-  teleported: '{prefix}Teleported!'
-  moved: '{prefix}Hologram has been moved!'
-  aligned: '{prefix}Hologram has been aligned!'
-  align_self: '{prefix}Cannot align a Hologram to itself!'
-  align_axis: '{prefix}That axis does not exist!'
-  down_origin_set: '{prefix}Origin has been set to &b''%1$s''&7!'
-  down_origin_does_not_exist: '{prefix}Down origin value must be either true or false!'
-  always_face_player_set: '{prefix}Always Face Player has been set to &b''%1$s''&7!'
-  always_face_player_does_not_exist: '{prefix}Always Face Player value must be either
-    true or false!'
-  facing_set: '{prefix}Facing has been set!'
-  flag_add: '{prefix}Flag &b"%1$s"&7 has been added!'
-  flag_remove: '{prefix}Flag &b"%1$s"&7 has been removed!'
-  permission_set: '{prefix}Permission has been set!'
-  permission_removed: '{prefix}Permission has been removed!'
+  does_not_exist: '{prefix}&c具有该名称的全息影像不存在.'
+  already_exists: '{prefix}&c具有该名称的全息影像已存在.'
+  invalid_name: '{prefix}&c名称无效 ''%1$s'', 仅使用字母数字字符,
+    下划线和破折号.'
+  created: '{prefix}已创建全息影像!'
+  cloned: '{prefix}全息影像已被克隆!'
+  deleted: '{prefix}全息影像已被删除!'
+  updated: '{prefix}全息影像已更新!'
+  renamed: '{prefix}全息影像已重命名! &7(&b%1$s&7 -> &b%2$s&7)'
+  teleported: '{prefix}传送!'
+  moved: '{prefix}全息影像已移动!'
+  aligned: '{prefix}全息影像已对齐!'
+  align_self: '{prefix}无法将全息影像与自身对齐!'
+  align_axis: '{prefix}该轴不存在!'
+  down_origin_set: '{prefix}原点 已设置为 &b''%1$s''&7!'
+  down_origin_does_not_exist: '{prefix}Down 源值必须为 true 或 false!'
+  always_face_player_set: '{prefix}Always Face Player 已设置为 &b''%1$s''&7!'
+  always_face_player_does_not_exist: '{prefix}Always Face Player 值必须是任一值
+    true 或 false!'
+  facing_set: '{prefix}已设置面向!'
+  flag_add: '{prefix}Flag &b"%1$s"&7 已添加!'
+  flag_remove: '{prefix}Flag &b"%1$s"&7 已被删除!'
+  permission_set: '{prefix}Permission 已设置!'
+  permission_removed: '{prefix}权限已被删除!'
   display_range_set: '{prefix}Display range has been set!'
   update_range_set: '{prefix}Update range has been set!'
   update_interval_set: '{prefix}Update interval has been set!'
